--- a/src/index.html
+++ b/src/index.html
@@ -19,12 +19,12 @@
   <div id="q-app"></div>
 
   <script type="text/javascript">
-    window._trackJs = {
-      token: 'a3ab59b8555040b5940d9860cdb17e4e'
-    };
+    // window._trackJs = {
+    //   token: 'a3ab59b8555040b5940d9860cdb17e4e'
+    // };
 
   </script>
-  <script type="text/javascript" src="https://cdn.trackjs.com/releases/current/tracker.js"></script>
+  <!-- <script type="text/javascript" src="https://cdn.trackjs.com/releases/current/tracker.js"></script> -->
   <script>
     (function (o, l, a, r, k, y) {
       if (o.olark) return;
