--- a/src/index.html
+++ b/src/index.html
@@ -54,7 +54,7 @@
         c: {},
         l: a
       };
-    })(window, document, "static.olark.com/jsclient/loader.js");
+    })(window, document, "static.olark.com/jsclient/loader.js")
 
   </script>
 </body>
