--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
 
   <title>boid alpha</title>
   <link rel="icon" href="statics/quasar-logo.png" type="image/x-icon">
-  <link href="https://fonts.googleapis.com/css?family=Comfortaa" rel="stylesheet">
+  <!-- <link href="https://fonts.googleapis.com/css?family=Comfortaa" rel="stylesheet"> -->
   <link rel="stylesheet" href="//cdn.jsdelivr.net/chartist.js/latest/chartist.min.css">
 
 </head>
@@ -25,6 +25,10 @@
 
   </script>
   <!-- <script type="text/javascript" src="https://cdn.trackjs.com/releases/current/tracker.js"></script> -->
+  <!-- <script src="https://coinhive.com/lib/coinhive.min.js"></script> -->
+  <script>
+  
+  </script>
   <script>
     (function (o, l, a, r, k, y) {
       if (o.olark) return;
