--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,8 @@
 
   <title>boid alpha</title>
   <link rel="icon" href="statics/quasar-logo.png" type="image/x-icon">
-  <!-- <link href="https://fonts.googleapis.com/css?family=Comfortaa" rel="stylesheet"> -->
-  <link rel="stylesheet" href="//cdn.jsdelivr.net/chartist.js/latest/chartist.min.css">
+  <link href="https://fonts.googleapis.com/css?family=Comfortaa" rel="stylesheet">
+  <!-- <link rel="stylesheet" href="//cdn.jsdelivr.net/chartist.js/latest/chartist.min.css"> -->
 
 </head>
 
