improved API error reporting

--- a/src/index.html
+++ b/src/index.html
@@ -27,8 +27,8 @@
       token: "88cf7b9474ef4924a9ca8bd51ad520dd"
   };
 </script>
-<script src="https://cdn.trackjs.com/releases/current/tracker.js">
-</script>
+<!-- <script src="https://cdn.trackjs.com/releases/current/tracker.js"> -->
+<!-- </script> -->
   <script>
     
   
