added telegram widget to the site

--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,10 @@
   </script>
 
     
+<script src="https://cdn.jsdelivr.net/npm/@widgetbot/html-embed"></script>
+
   <script>
+    
     (function (o, l, a, r, k, y) {
       if (o.olark) return;
       r = "script";
