--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
 
 
   <title>boid alpha</title>
-  <link rel="icon" href="statics/quasar-logo.png" type="image/x-icon">
+  <link rel="icon" href="statics/BOIDLogo.png" type="image/x-icon">
   <link href="https://fonts.googleapis.com/css?family=Comfortaa" rel="stylesheet">
   <!-- <link rel="stylesheet" href="//cdn.jsdelivr.net/chartist.js/latest/chartist.min.css"> -->
 
