add powerpools btn

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-102234643-2"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
+    function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
 
     gtag('config', 'UA-102234643-2');
@@ -14,7 +14,8 @@
   <meta charset="utf-8">
   <meta name="format-detection" content="telephone=no">
   <meta name="msapplication-tap-highlight" content="no">
-  <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
+  <meta name="viewport"
+    content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
 
 
   <title>boid alpha</title>
@@ -32,11 +33,11 @@
 
   </script>
 
-    
-<script src="https://cdn.jsdelivr.net/npm/@widgetbot/html-embed"></script>
 
-  <script>
-    
+  <script src="https://cdn.jsdelivr.net/npm/@widgetbot/html-embed"></script>
+
+  <!-- <script>
+
     (function (o, l, a, r, k, y) {
       if (o.olark) return;
       r = "script";
@@ -67,7 +68,7 @@
       };
     })(window, document, "static.olark.com/jsclient/loader.js")
 
-  </script>
+  </script> -->
 </body>
 
 </html>
